# helix

./: .clippy.toml  .codecov.yml  .editorconfig  .env.example  .gdbinit  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/src/: engine.rs  ipc.rs  irq.rs  lib.rs  memory.rs  results.rs  scheduler.rs  stress.rs  timing.rs
boot/limine/: Cargo.toml
boot/limine/src/: error.rs  framebuffer.rs  lib.rs  memory.rs  validate.rs
boot/limine/src/protocol/: mod.rs  raw.rs
boot/limine/src/requests/: boot.rs  firmware.rs  framebuffer.rs  kernel.rs  mod.rs
boot/multiboot2/: Cargo.toml
boot/multiboot2/src/: header.rs  info.rs  lib.rs  memory.rs  validate.rs
boot/uefi/: Cargo.toml  README.md
boot/uefi/src/: error.rs  lib.rs
boot/uefi/src/acpi/: mod.rs
boot/uefi/src/animation/: mod.rs
boot/uefi/src/arch/: mod.rs
boot/uefi/src/arch/x86_64/: cpu.rs  (+5 more)
boot/uefi/src/audio/: mod.rs
boot/uefi/src/block/: mod.rs
boot/uefi/src/bootmgr/: mod.rs
boot/uefi/src/chain/: mod.rs
boot/uefi/src/commands/: mod.rs
boot/uefi/src/compress/: mod.rs
boot/uefi/src/config/: mod.rs
boot/uefi/src/console/: mod.rs
boot/uefi/src/crypto/: mod.rs
boot/uefi/src/debug/: mod.rs
boot/uefi/src/device_path/: mod.rs
boot/uefi/src/diag/: mod.rs
boot/uefi/src/drivers/: mod.rs
boot/uefi/src/elf/: mod.rs
boot/uefi/src/entries/: mod.rs
boot/uefi/src/event/: mod.rs
boot/uefi/src/events/: mod.rs
boot/uefi/src/fat32/: mod.rs
boot/uefi/src/filesystem/: mod.rs
boot/uefi/src/framebuffer/: mod.rs
boot/uefi/src/graphics/: mod.rs
boot/uefi/src/guid/: mod.rs
boot/uefi/src/handoff/: bootinfo.rs  framebuffer.rs  memory_map.rs  mod.rs  modules.rs  rsdp.rs
boot/uefi/src/help/: mod.rs
boot/uefi/src/input/: mod.rs
boot/uefi/src/layout/: mod.rs
boot/uefi/src/loader/: elf.rs  image.rs  mod.rs  pe.rs  relocate.rs  symbols.rs  verify.rs
boot/uefi/src/locale/: mod.rs
boot/uefi/src/mem_alloc/: mod.rs
boot/uefi/src/memory/: allocator.rs  map.rs  mod.rs  paging.rs  regions.rs  virtual_memory.rs
boot/uefi/src/menu/: mod.rs
boot/uefi/src/monitor/: mod.rs
boot/uefi/src/netboot/: mod.rs
boot/uefi/src/netstack/: mod.rs
boot/uefi/src/network/: mod.rs
boot/uefi/src/nvme/: mod.rs
boot/uefi/src/orchestrator/: mod.rs
boot/uefi/src/parse/: mod.rs
boot/uefi/src/partition/: mod.rs
boot/uefi/src/pci/: mod.rs
boot/uefi/src/pe/: mod.rs
boot/uefi/src/perf/: mod.rs
boot/uefi/src/power/: mod.rs
boot/uefi/src/profiles/: mod.rs
boot/uefi/src/protocols/: acpi.rs  block.rs  console.rs  filesystem.rs  graphics.rs  mod.rs  network.rs  pci.rs  rng.rs  security.rs  serial.rs  smbios.rs  usb.rs
boot/uefi/src/raw/: boot_services.rs  memory.rs  mod.rs  runtime_services.rs  system_table.rs  types.rs
boot/uefi/src/recovery/: mod.rs
boot/uefi/src/resources/: mod.rs
boot/uefi/src/runtime/: mod.rs
boot/uefi/src/scsi/: mod.rs
boot/uefi/src/sdmmc/: mod.rs
boot/uefi/src/security/: hash.rs  keys.rs  mod.rs  secureboot.rs  signature.rs  tpm.rs
boot/uefi/src/services/: boot.rs  capsule.rs  events.rs  memory.rs  mod.rs  protocols.rs  runtime.rs  time.rs  tpl.rs  variables.rs  watchdog.rs
boot/uefi/src/settings/: mod.rs
boot/uefi/src/smbios/: mod.rs
boot/uefi/src/splash/: mod.rs
boot/uefi/src/string/: mod.rs
boot/uefi/src/sysinfo/: mod.rs
boot/uefi/src/tables/: acpi.rs  config.rs  mod.rs  smbios.rs
boot/uefi/src/terminal/: mod.rs
boot/uefi/src/testing/: mod.rs
boot/uefi/src/theme/: mod.rs
boot/uefi/src/time/: mod.rs
boot/uefi/src/tpm/: mod.rs
boot/uefi/src/usb/: mod.rs
boot/uefi/src/validate/: mod.rs
boot/uefi/src/variable/: mod.rs
boot/uefi/src/virtio/: mod.rs
fs/: Cargo.toml
fs/src/: lib.rs
fs/src/alloc/: bitmap.rs  buddy.rs  cow.rs  freelist.rs  mod.rs  zone.rs
fs/src/api/: handle.rs  mod.rs  mount.rs  ops.rs  vfs.rs
fs/src/cache/: arc.rs  buffer.rs  inode.rs  mod.rs  page.rs
fs/src/compress/: adaptive.rs  lz4.rs  mod.rs  zstd.rs
fs/src/crypto/: aead.rs  cipher.rs  integrity.rs  key.rs  mod.rs
fs/src/disk/: device.rs  extent.rs  inode.rs  layout.rs  mod.rs  superblock.rs
fs/src/journal/: checkpoint.rs  mod.rs  record.rs  recovery.rs  txn.rs  wal.rs
fs/src/ops/: dir.rs  file.rs  io.rs  link.rs  mod.rs  xattr.rs
fs/src/snapshot/: clone.rs  diff.rs  mod.rs  tree.rs
fs/src/tree/: btree.rs  cursor.rs  dir.rs  mod.rs  node.rs  radix.rs
fs/src/vfs/: dentry.rs  inode.rs  mod.rs  namespace.rs  superblock.rs
hal/: Cargo.toml
hal/src/: arch_stubs.rs  cpu.rs  firmware.rs  interrupts.rs  lib.rs  mmu.rs
hal/src/arch/: mod.rs
hal/src/arch/x86_64/: context.rs  cpu.rs  exceptions.rs  gdt.rs  idt.rs  irq.rs  mod.rs  paging.rs  pic.rs  pit.rs  syscall.rs  task.rs  userspace.rs
modules/: Cargo.toml  README.md
modules/src/: abi.rs  dependencies.rs  hot_reload.rs  interface.rs  lib.rs  loader.rs  registry.rs  v2.rs  v2_tests.rs
modules_impl/schedulers/round_robin/: Cargo.toml
modules_impl/schedulers/round_robin/src/: config.rs  lib.rs  scheduler.rs
profiles/minimal/: Cargo.toml  helix.toml  linker.ld
profiles/minimal/src/: boot.rs  filesystem.rs  main.rs
subsystems/ai/: Cargo.toml
subsystems/ai/src/: cortex.rs  healer.rs  intent.rs  learning.rs  lib.rs  memory.rs  metrics.rs  neural.rs  optimizer.rs  resources.rs  safety.rs  security.rs  tests.rs
subsystems/dis/: Cargo.toml  api.rs  executor.rs  intent.rs  ipc.rs  isolation.rs  mod.rs  optimizer.rs  policy.rs  queues.rs  scheduler.rs  stats.rs
subsystems/execution/: Cargo.toml
subsystems/execution/src/: context.rs  domains.rs  lib.rs  process.rs
subsystems/execution/src/scheduler/: metrics.rs  mod.rs  priority.rs  queue.rs  traits.rs
subsystems/memory/: Cargo.toml
subsystems/memory/src/: lib.rs  protection.rs  region.rs
subsystems/userspace/: Cargo.toml  README.md
subsystems/userspace/src/: elf.rs  environment.rs  lib.rs  program.rs  runtime.rs  shell.rs  syscalls.rs
(+64 files in other folders)
