# =============================================================================
# Helix AI - Kernel-Integrated Artificial Intelligence Subsystem
# =============================================================================
# Revolutionary AI engine for autonomous system management
# =============================================================================

[package]
name = "helix-ai"
version = "0.1.0"
edition = "2021"
authors = ["Helix OS Contributors"]
license = "MIT OR Apache-2.0"
description = "Kernel-integrated AI for autonomous system optimization, self-healing, and intelligent resource management"
repository = "https://github.com/helix-os/helix"
keywords = ["kernel", "ai", "ml", "autonomous", "self-healing"]
categories = ["os", "embedded", "no-std"]

[lib]
name = "helix_ai"
path = "src/lib.rs"

[dependencies]
# Internal crates (optional - enable when integrating with full kernel)
# helix-core = { path = "../../core", optional = true }
# helix-hal = { path = "../../hal", optional = true }
# helix-memory = { path = "../memory", optional = true }
# helix-execution = { path = "../execution", optional = true }

# External no_std dependencies
spin = "0.9"
bitflags = "2.4"
log = "0.4"
hashbrown = "0.14"
libm = "0.2"

[features]
default = ["intent-engine", "self-optimization", "predictive-security"]
full = ["default", "neural-engine", "continuous-learning", "npu-acceleration"]

# Core AI features
intent-engine = []
self-optimization = []
self-healing = []
predictive-security = []

# Advanced features
neural-engine = []
continuous-learning = []
npu-acceleration = []
gpu-acceleration = []

# Debug features
ai-debug = []
ai-tracing = []
ai-metrics = []

[dev-dependencies]
# Test dependencies would go here

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
