[package]
name = "helix-execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution subsystem for Helix OS Framework - scheduler, threads, contexts"

[dependencies]
helix-hal = { workspace = true }

bitflags = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []
smp = []
